# screenshit-rs

./: Cargo.toml  README.md
scripts/: screenshot.sh
src/: annotate.rs  capture.rs  editor.rs  hotkey.rs  main.rs
